# avanti_test_plugin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
ImgWindow/: ImgFontAtlas.h  ImgFreeTypeFontAtlas.h  ImgWindow.h
cmake/: xplm.cmake
imgui/misc/cpp/: imgui_stdlib.cpp
lin_x64/: avanti.xpl
src/: globals.cpp  globals.h  gui.cpp  gui.h  gui_debug.cpp  gui_debug.h  image_loader.cpp  image_loader.h  main.c  main.cpp  main.h  menu.c  menu.cpp  menu.h
